--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,21 +1,22 @@
 .navbar-container {
      position: sticky;
      top: 0px;
-     padding: 16px;
+     padding: 20px;
      width: 100%;
      z-index: 1;
      overflow: hidden;
      background-color: #000;
 }
 .navbar-container > div {
-     padding: 20px;
+     padding: 1.5vw;
      display: flex;
      align-items: center;
      justify-content: space-between;
      border: 1px solid #cecece;
 }
 .nav-name {
-     font-size: 2em;
+     font-size: 2.5vw;
+     /* border: 1px solid #fff; */
      cursor: pointer;
      font-family: Mynerve;
      color: rgb(101, 255, 101);
@@ -26,12 +27,12 @@
 }
 .navbar-container > div > div:nth-of-type(2) {
      display: flex;
-     gap: 10px;
+     gap: 20px;
      margin-right: 20px;
 }
 
 .about-container > a > p {
-     font-size: 1.4em;
+     font-size: 1.4vw;
      font-family: Bebas Neue;
      cursor: pointer;
 }
@@ -48,7 +49,7 @@
      }
 
      .nav-name {
-          font-size: 1.5em;
+          font-size: 25px;
      }
      .mobile-nav-container {
           position: sticky;
@@ -129,7 +130,7 @@
      .overlay-div > div > div:nth-of-type(2) > a > p {
           color: #000;
           font-family: Bebas Neue;
-          font-size: 1.3em;
+          font-size: 20px;
           text-decoration: line-through;
      }
      @keyframes cancel1 {
