--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -4,7 +4,7 @@
 .about-me-container > h1 {
      font-family: Mynerve;
      /* padding-left: 20px; */
-     font-size: 2.5em;
+     font-size: 2.5vw;
      margin-bottom: 20px;
 }
 .about-me-container > div {
@@ -17,7 +17,7 @@
      color: rgb(101, 255, 101);
      letter-spacing: 1.5px;
 
-     font-size: 20px;
+     font-size: 2.6vw;
 }
 .about-me-container > div > p > span {
      color: #fff;
@@ -33,12 +33,12 @@
           padding: 20px;
      }
      .about-me-container > h1 {
-          font-size: 2em;
+          font-size: 2vw;
      }
      .about-me-container > div > p {
           font-family: Mynerve;
           width: 80%;
           color: rgb(101, 255, 101);
-          font-size: 15px;
+          font-size:  1.95vw;
      }
 }
