--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -7,7 +7,7 @@
      flex-direction: column;
 }
 .project-txt {
-     font-size: 3em;
+     font-size: 3vw;
      font-family: Bebas neue;
      letter-spacing: 1.5px;
      padding-left: 20px;
@@ -36,14 +36,14 @@
      color: rgb(101, 255, 101);
      font-family: mynerve;
      letter-spacing: 1.5px;
-     font-size: 4em;
+     font-size: 4vw;
      z-index: 99;
 }
 .project-content > div > p {
      /* position: absolute; */
+     font-size: 1.5vw;
      right: 0;
-
-     z-index: 99;
+     z-index: 999;
      font-family: Bebas neue;
      text-align: center;
      width: 70%;
@@ -51,8 +51,8 @@
 }
 
 .project-content > div > img {
-     width: 500px;
-     height: 400px;
+     width:  32.5vw;
+     height:  26vw;
      object-fit: contain;
      position: absolute;
      right: 0;
@@ -64,6 +64,7 @@
      animation-duration: 0.2s;
      animation-timing-function: linear;
      transform: rotate(-10deg);
+     z-index: 0;
 }
 
 @keyframes imgOpa {
@@ -104,7 +105,7 @@
           overflow: hidden;
      }
      .project-content > div > h1 {
-          font-size: 2.3em;
+          font-size: 25px;
      }
      .project-content > div > p {
           font-size: 15px;
