--- a/src/Components/Stack/Stack.css
+++ b/src/Components/Stack/Stack.css
@@ -15,7 +15,7 @@
      text-align: start;
      color: #fff;
      padding-left: 20px;
-     font-size: 4em;
+     font-size: 4vw;
      font-family: Bebas neue;
      color: #fff;
      letter-spacing: 2px;
@@ -56,7 +56,7 @@
      color: #000;
      font-family: mynerve;
      font-weight: 500;
-     font-size: 20px;
+     font-size: 2.6vw;
      letter-spacing: 1.5px;
 }
 
@@ -68,7 +68,7 @@
           padding: 0;
      }
      .stack-container > h1 {
-          font-size: 3em;
+          font-size: 3vw;
      }
 
      .stack-content > div {
@@ -80,6 +80,6 @@
           height: 60px;
      }
      .stack-content > div > p {
-          font-size: 18px;
+          font-size: 2.3vw;
      }
 }
