--- a/src/Components/Overlay/Overlay.css
+++ b/src/Components/Overlay/Overlay.css
@@ -11,7 +11,7 @@
      width: 100%;
      height: 100vh;
      display: flex;
- 
+
      justify-content: center;
      align-items: center;
      background-color: #000;
@@ -22,28 +22,32 @@
      /* border: 1px solid rgb(101, 255, 101); */
      opacity: 0;
      transition: opacity 0.1s ease-in;
-  
 }
 .overlay > h1 {
      color: rgb(101, 255, 101);
      font-family: mynerve;
-     letter-spacing: 1.5px;font-size: 25px;
+     letter-spacing: 1.5px;
+     font-size: 3vw;
      text-align: center;
-
 }
 
 .overlay.show {
      opacity: 1;
 }
 
-@media screen and (max-width:540px) {
+@media screen and (max-width: 540px) {
      .overlay {
-     position: fixed;
-     /* top: 0;
+          position: fixed;
+          /* top: 0;
      left: 0; */
-     width: 100%;
-     height: 100vh;
-
-  
-}
+          width: 100%;
+          height: 100vh;
+     }
+     .overlay > h1 {
+          color: rgb(101, 255, 101);
+          font-family: mynerve;
+          letter-spacing: 1.5px;
+          font-size: 30px;
+          text-align: center;
+     }
 }
