--- a/src/Components/Stack/Stack.css
+++ b/src/Components/Stack/Stack.css
@@ -35,8 +35,8 @@
 }
 
 .stack-content > div {
-     width: 150px;
-     height: 150px;
+     width: 10vw;
+     height: 10vw;
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -48,15 +48,15 @@
      overflow: hidden;
 }
 .stack-content > div > img {
-     width: 100px;
-     height: 100px;
+     width:  6vw;
+     height:  6vw;
      object-fit: contain;
 }
 .stack-content > div > p {
      color: #000;
      font-family: mynerve;
      font-weight: 500;
-     font-size: 2.6vw;
+     font-size: 1.6vw;
      letter-spacing: 1.5px;
 }
 
@@ -68,7 +68,7 @@
           padding: 0;
      }
      .stack-container > h1 {
-          font-size: 3vw;
+          font-size: 30px;
      }
 
      .stack-content > div {
@@ -80,6 +80,6 @@
           height: 60px;
      }
      .stack-content > div > p {
-          font-size: 2.3vw;
+          font-size: 5vw;
      }
 }
