Increased font size of stack header and project

--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -93,7 +93,11 @@
           align-items: start;
           gap: 20px;
      }
+.project-txt {
+     font-size: 25px;
+     font-family: Bebas neue;
 
+}
 
     
      .project-content > div > img {
