--- a/src/Components/LoadingPage/LoadingPage.css
+++ b/src/Components/LoadingPage/LoadingPage.css
@@ -4,8 +4,14 @@
      justify-content: center;
      align-items: center;
      position: absolute;
+     flex-direction: column;
      display: flex;
      z-index: 1;
      background-color: #000;
-   
+}
+
+.loader-container > div > h1 {
+     text-align: center;
+     /* font-size: 18px; */
+     font-family: Mynerve;
 }
