--- a/src/Components/Overlay/Overlay.css
+++ b/src/Components/Overlay/Overlay.css
@@ -11,7 +11,6 @@
      width: 100%;
      height: 100vh;
      display: flex;
-
      justify-content: center;
      align-items: center;
      background-color: #000;
@@ -22,6 +21,7 @@
      /* border: 1px solid rgb(101, 255, 101); */
      opacity: 0;
      transition: opacity 0.1s ease-in;
+     /* overflow: ; */
 }
 .overlay > h1 {
      color: rgb(101, 255, 101);
