--- a/src/Components/LoadingPage/LoadingPage.css
+++ b/src/Components/LoadingPage/LoadingPage.css
@@ -8,6 +8,10 @@
      display: flex;
      z-index: 1;
      overflow: hidden;
+     left: 0;
+     right: 0;
+     top: 0;
+     bottom: 0;
      background-color: #000;
 }
 
